# django-fmd_ynh

./: .editorconfig  .gitignore  README.md  README_es.md  README_eu.md  README_fr.md  README_gl.md  README_id.md  README_it.md  README_ru.md  README_zh_Hans.md  check_process  config_panel.toml  dev-cli.py  local_settings_source.py  manage_local_test.py  manifest.json  manifest.toml  pyproject.toml  requirements.dev.txt  tests.toml
.github/workflows/: tests.yml
.run/: Template Python.run.xml  dev-cli test.run.xml
conf/: django-fmd.service  gunicorn.conf.py  manage.py  requirements.txt  settings.py  setup_user.py  systemd.service  urls.py
django_fmd_ynh/: __init__.py  constants.py
django_fmd_ynh/cli/: dev.py
django_fmd_ynh/cli_dev/: __init__.py  code_style.py  packaging.py  testing.py
django_fmd_ynh/tests/: __init__.py  test_django_project.py  test_django_project_login_happy_path_1.snapshot.html  test_doctests.py  test_project_setup.py  test_readme.py
doc/: ADMIN.md  DESCRIPTION.md  DISCLAIMER.md
scripts/: _common.sh  backup  change_url  install  remove  restore  upgrade
tests/: test_django_project.py  test_django_project_auth_1.snapshot.html  test_django_project_web_page_as_sso_user_1.snapshot.html  test_project_setup.py
